fix(frontend): correctly load browser extension scripts
- remove dist/ prefix from manifest.json paths
- add type='module' to popup.html and options.html script tags

Co-authored-by: Antigravity <antigravity-ai>

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -265,6 +265,6 @@
     </div>
   </div>
 
-  <script src="dist/options.js"></script>
+  <script type="module" src="options.js"></script>
 </body>
 </html>
