--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -167,6 +167,6 @@
     </div>
   </div>
 
-  <script src="dist/popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
